# Final_project

./: .env_example  Travel_agency_final_project2.sqlite3  dao.py  database.py  main.py  models.py  pyproject.toml
api/: travels.py
templates/: base.html  index.html  login.html  register.html  search_html.html
web/: web_travels.py
