[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["user <berulavagio2009@gmail.con>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.112.0"}
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
sqlalchemy = {extras = ["all"], version = "^2.0.32"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.black]
line-length = 120